fix: add contrast to "btn-link"
[#OCD-3513]

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -913,6 +913,7 @@ label {
     font-size: 16px;
     line-height: 1.38;
     letter-spacing: .18px;
+    color: var(--blue);
 }
 
 [uib-datepicker-popup-wrap] .btn {
